# posixtest

./: .gitignore  GNUmakefile.in  Makefile  README  bootstrap  configure.ac  main.c  version.sh
source/: main.c  mmap.c  socket.c
src/: entrypoints.h
